--- a/supervisord.conf
+++ b/supervisord.conf
@@ -33,3 +33,5 @@ stdout_logfile_backups = 20   ; stdout 日志文件备份数，默认是10
 stdout_logfile=logs/gunicorn.log
 stopasgroup=true     ;默认为false,进程被杀死时，是否向这个进程组发送stop信号，包括子进程
 killasgroup=true     ;默认为
+
+directory=/home/fffcc
